; ModuleID = '/home/carl/AnghaBench/libgit2/deps/ntlmclient/extr_ntlm.c_generate_ntlm2_response.c'
source_filename = "/home/carl/AnghaBench/libgit2/deps/ntlmclient/extr_ntlm.c_generate_ntlm2_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i8*, i64, %struct.TYPE_10__, i32, i32 }
%struct.TYPE_10__ = type { i32, i8* }

@NTLM_NTLM2_HASH_LEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"out of memory\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_11__*)* @generate_ntlm2_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @generate_ntlm2_response(%struct.TYPE_11__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_11__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  %8 = alloca i8, align 1
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca [16 x i8], align 16
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %3, align 8
  %14 = load i32, i32* @NTLM_NTLM2_HASH_LEN, align 4
  %15 = zext i32 %14 to i64
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %9, align 8
  %17 = alloca i8, i64 %15, align 16
  store i64 %15, i64* %10, align 8
  %18 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %19 = call i32 @generate_timestamp(%struct.TYPE_11__* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %29

21:                                               ; preds = %1
  %22 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %23 = call i32 @generate_nonce(%struct.TYPE_11__* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %21
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %27 = call i32 @generate_ntlm2_hash(i8* %17, %struct.TYPE_11__* %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %30, label %29

29:                                               ; preds = %25, %21, %1
  store i32 0, i32* %2, align 4
  store i32 1, i32* %13, align 4
  br label %117

30:                                               ; preds = %25
  %31 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %32 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %31, i32 0, i32 2
  %33 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = add nsw i32 %34, 32
  %36 = sext i32 %35 to i64
  store i64 %36, i64* %4, align 8
  %37 = load i64, i64* %4, align 8
  %38 = add i64 %37, 16
  store i64 %38, i64* %5, align 8
  %39 = load i64, i64* %5, align 8
  %40 = call i8* @malloc(i64 %39)
  %41 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %42 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %41, i32 0, i32 0
  store i8* %40, i8** %42, align 8
  %43 = icmp eq i8* %40, null
  br i1 %43, label %44, label %47

44:                                               ; preds = %30
  %45 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %46 = call i32 @ntlm_client_set_errmsg(%struct.TYPE_11__* %45, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  store i32 1, i32* %13, align 4
  br label %117

47:                                               ; preds = %30
  %48 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %49 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %48, i32 0, i32 0
  %50 = load i8*, i8** %49, align 8
  %51 = getelementptr inbounds i8, i8* %50, i64 16
  store i8* %51, i8** %12, align 8
  %52 = call zeroext i8 @htonl(i32 16842752)
  store i8 %52, i8* %6, align 1
  %53 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %54 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %53, i32 0, i32 4
  %55 = load i32, i32* %54, align 4
  %56 = call zeroext i8 @htonll(i32 %55)
  store i8 %56, i8* %7, align 1
  %57 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %58 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %57, i32 0, i32 3
  %59 = load i32, i32* %58, align 8
  %60 = call zeroext i8 @htonll(i32 %59)
  store i8 %60, i8* %8, align 1
  %61 = load i8*, i8** %12, align 8
  %62 = getelementptr inbounds i8, i8* %61, i64 0
  %63 = call i32 @memcpy(i8* %62, i8* %6, i32 4)
  %64 = load i8*, i8** %12, align 8
  %65 = getelementptr inbounds i8, i8* %64, i64 4
  %66 = call i32 @memset(i8* %65, i32 0, i32 4)
  %67 = load i8*, i8** %12, align 8
  %68 = getelementptr inbounds i8, i8* %67, i64 8
  %69 = call i32 @memcpy(i8* %68, i8* %7, i32 8)
  %70 = load i8*, i8** %12, align 8
  %71 = getelementptr inbounds i8, i8* %70, i64 16
  %72 = call i32 @memcpy(i8* %71, i8* %8, i32 8)
  %73 = load i8*, i8** %12, align 8
  %74 = getelementptr inbounds i8, i8* %73, i64 24
  %75 = call i32 @memset(i8* %74, i32 0, i32 4)
  %76 = load i8*, i8** %12, align 8
  %77 = getelementptr inbounds i8, i8* %76, i64 28
  %78 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %79 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %78, i32 0, i32 2
  %80 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %79, i32 0, i32 1
  %81 = load i8*, i8** %80, align 8
  %82 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %83 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %82, i32 0, i32 2
  %84 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %83, i32 0, i32 0
  %85 = load i32, i32* %84, align 8
  %86 = call i32 @memcpy(i8* %77, i8* %81, i32 %85)
  %87 = load i8*, i8** %12, align 8
  %88 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %89 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %88, i32 0, i32 2
  %90 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %89, i32 0, i32 0
  %91 = load i32, i32* %90, align 8
  %92 = add nsw i32 28, %91
  %93 = sext i32 %92 to i64
  %94 = getelementptr inbounds i8, i8* %87, i64 %93
  %95 = call i32 @memset(i8* %94, i32 0, i32 4)
  %96 = getelementptr inbounds [16 x i8], [16 x i8]* %11, i64 0, i64 0
  %97 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %98 = load i8*, i8** %12, align 8
  %99 = load i64, i64* %4, align 8
  %100 = call i32 @generate_ntlm2_challengehash(i8* %96, %struct.TYPE_11__* %97, i8* %17, i8* %98, i64 %99)
  %101 = icmp ne i32 %100, 0
  br i1 %101, label %103, label %102

102:                                              ; preds = %47
  store i32 0, i32* %2, align 4
  store i32 1, i32* %13, align 4
  br label %117

103:                                              ; preds = %47
  %104 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %105 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %104, i32 0, i32 0
  %106 = load i8*, i8** %105, align 8
  %107 = getelementptr inbounds [16 x i8], [16 x i8]* %11, i64 0, i64 0
  %108 = call i32 @memcpy(i8* %106, i8* %107, i32 16)
  %109 = load i64, i64* %5, align 8
  %110 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %111 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %110, i32 0, i32 1
  store i64 %109, i64* %111, align 8
  %112 = load %struct.TYPE_11__*, %struct.TYPE_11__** %3, align 8
  %113 = call i32 @generate_lm2_response(%struct.TYPE_11__* %112, i8* %17)
  %114 = icmp ne i32 %113, 0
  br i1 %114, label %116, label %115

115:                                              ; preds = %103
  store i32 0, i32* %2, align 4
  store i32 1, i32* %13, align 4
  br label %117

116:                                              ; preds = %103
  store i32 1, i32* %2, align 4
  store i32 1, i32* %13, align 4
  br label %117

117:                                              ; preds = %116, %115, %102, %44, %29
  %118 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %118)
  %119 = load i32, i32* %2, align 4
  ret i32 %119
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @generate_timestamp(%struct.TYPE_11__*) #2

declare dso_local i32 @generate_nonce(%struct.TYPE_11__*) #2

declare dso_local i32 @generate_ntlm2_hash(i8*, %struct.TYPE_11__*) #2

declare dso_local i8* @malloc(i64) #2

declare dso_local i32 @ntlm_client_set_errmsg(%struct.TYPE_11__*, i8*) #2

declare dso_local zeroext i8 @htonl(i32) #2

declare dso_local zeroext i8 @htonll(i32) #2

declare dso_local i32 @memcpy(i8*, i8*, i32) #2

declare dso_local i32 @memset(i8*, i32, i32) #2

declare dso_local i32 @generate_ntlm2_challengehash(i8*, %struct.TYPE_11__*, i8*, i8*, i64) #2

declare dso_local i32 @generate_lm2_response(%struct.TYPE_11__*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
